# PlacementTrainingLPU

./: .gitignore  CMakeLists.txt  README.md
C++/: .gitignore  CMakeLists.txt
C++/day0/: BestTimeToBuyAndSellStock.cpp  Search2DMatrix.cpp
C++/day1/:  BestTimeToBuyAndSellStock.cpp  3Sum.cpp  SearchInSortedRotatedArray.cpp  SortArray.cpp
C++/day2/: SubarrayPermutations.cpp
C++/template/: output.txt  test.cpp
Company Internship Tests/Josh Technology Group Pvt Ltd/: Josh Tech Group Questions.txt
Company Internship Tests/Juspay Internship/: Solution2.py  Solution3.java
Company Internship Tests/MoveInSync Company Internship/: Q1_WarIsOn.cpp  Q2_FindThePassword.cpp  Q3_LetsPlayAGame.cpp
JAVA/day0/: KthLargestElement.java  MajorityElement.java  Search2DMatrix.java  TrappingRainWater.java  TwoPeopleMeet.java
JAVA/day1/: BestTimeToBuyAndSellStock.java  Heaters.java  SearchInRotatedSortedArray.java  TopWatchedYTVideos.java  TrappingRainwater.java
JAVA/day2/: FirstIndexOfNumber.java  GenerateParentheses.java  LetterCombinationsOfPhoneNumber.java  MaxUsingRecursion.java  MergeSortedArray.java
JAVA/day3/: DecodeWays.java  SpecialNumber.java
Juspay Internship/: Solution1.java
LeetCode - Weekly Contest 294/: sol1.cpp  sol2.cpp  sol3.cpp  sol4.cpp
Test 1/: Solution1.cpp  Solution2.java  Solution3.java
Test 2/: Solution.java  Solution2.java  Solution3.java
Test 3/: Solution1.java  Solution2.java  Solution3.java
Vahan SDE/: README.md
day0/: KthLargestElement.java  MajorityElement.java  TrappingRainWater.java  TwoPeopleMeet.java
template/: error.txt
(+12 files in other folders)
